5.7.6
-----
1. If images are removed from a list item then also remove 'Show image'
   action.
2. Fix missing 'Play next' and 'Append to queue' actions when showing covers
   of online service albums via 'Show image' action.
3. Allow specifying a list of player IDs to hide via 'hidePlayers=a,b' URL
   query parameter.

5.7.5
-----
1. Fix not being able to toggle a player in sync dialog.
2. Fix dropping external files onto queue.
3. Fix colour of 'Other settings' header in 'Player' settings dialog.

5.7.4
-----
1. Fix oddities with group volume dialog.
2. Close other dialogs via click outside.

5.7.3
-----
1. Re-add fix to not use custom select library for multi-select lists.
2. Try not to switch to MAI view when swiping on track info that needs to be
   scrolled.
3. Add down arrow next to player name in 'Player' settings dialogs, if more
   than 1 player.
4. Close volume popups if click outside.
5. Remove 'Material Skin (Party)' from LMS skins list, causes to much
   confusion.

5.7.2
-----
 1. Re-add custom select library, but disable for 'Custom Skip'.
 2. Handle case where there is an 'Other' group at start of release.
 3. Don't use solid colour for 'Save Settings' button as some colours (if set
    from cover) can cause poor contrast.
 4. Prevent flash of blue when activating a select menu in settings pages on
    touch devices.
 5. Fix clipping of covers in grid view.
 6. Fix adding, and removing, tracks from favourites via now-playing.
 7. Only split into groups if all groups are single blocks.
 8. Use LMS 9.0.1's contiguous_groups flag to only show multi-group icon in
    album covers if groups of album are in contiguous blocks.
 9. Use same icon to show library refresh in progress in 'Information' dialog
    as per in toolbar.
10. Update current player status if click on it's name in navigation drawer.
11. Fix playing playlists, artists, and albums, from favourites.
12. Fix 'Go to composer', etc., sometimes not showing in now-playing menu for
    LMS9.0.1+